cabal-version: 1.12

name:           motion-streamer
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/motion-streamer#readme>
homepage:       https://github.com/diogob/motion-streamer#readme
bug-reports:    https://github.com/diogob/motion-streamer/issues
author:         Diogo Biazus
maintainer:     diogo@biazus.ca
copyright:      2022 Diogo Biazus
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/motion-streamer

library
  exposed-modules:
      Lib
    , Config
  other-modules:
      Paths_motion_streamer
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , gi-gst >= 1.0.25 && <2
    , gi-glib >= 2 && < 2.1
    , haskell-gi >= 0.26.0 && < 0.27
    , transformers >= 0.5.6.2 && < 0.6
    , text >= 1.2.5.0 && < 2.1
    , exceptions >= 0.10.4 && < 0.11
    , envparse >= 0.5.0 && < 0.6
    , time >= 1.9 && < 1.13
  default-language: Haskell2010
  default-extensions: OverloadedStrings
  ghc-options: -Wall

executable motion-streamer
  main-is: Main.hs
  other-modules:
      Paths_motion_streamer
  hs-source-dirs:
      app
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , motion-streamer
  default-language: Haskell2010
  default-extensions: OverloadedStrings

test-suite motion-streamer-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_motion_streamer
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , motion-streamer
  default-language: Haskell2010
  default-extensions: OverloadedStrings
